# clevon

./: .env.example  .gitignore  README.md  package-lock.json  package.json  render.yaml  tsconfig.json  vercel.json
contracts/agent-vault/: Cargo.toml  deploy.sh
contracts/agent-vault/src/: lib.rs
contracts/budget-guardian/: Cargo.toml  deploy.sh
contracts/budget-guardian/src/: lib.rs
docs/sections/: phase-03-stellar-oracle.md  phase-04-external-x402.md  phase-05-web-intel-agents.md  phase-06-analysis-agent.md  phase-07-reporter-agent.md  phase-08-orchestrator-core.md  phase-09-execution-engine.md  phase-10-dashboard.md  phase-11-reputation.md  phase-12-soroban.md  phase-13-integration.md  upgrade-u1-agent-vault.md  upgrade-u2-wallet-integration.md  upgrade-u3-orchestrator.md  upgrade-u4-vault-panel.md
scripts/: add-usdc-trustlines.ts  bootstrap.ts  distribute-usdc.ts  setup-wallets.ts  start.sh  stop.sh
